@@ -17,6 +17,7 @@ namespace utils {
   void dump(const void* ptr, size_t len);
   bool token(const std::string& str, const std::string& delim, std::vector<std::string>& result);
   std::string chomp(const std::string& str);
+  bool filexts(const std::string& str, std::string& exts);
 };
 
 #endif	/* _UTILS_H_ */
